feat(backend): updated swagger docs for auth endpoints
